tests/bad/objects/4.lat
class A {
    int a;

    int fun(int n) {
        int b;

        return x;
    }
}

int main () { return 0; }